# rust_binance

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: auth.rs  client.rs  errors.rs  lib.rs  request.rs  websocket.rs
src/client/: account.rs  general.rs  market.rs  mod.rs  root.rs  trading.rs  treading.rs
src/types/: account.rs  events.rs  mod.rs
src/types/general/: average_price.rs  error.rs  excahnge_info.rs  klines.rs  mod.rs  timestamp.rs  trades.rs
src/types/market/: average_price.rs  klines.rs  mod.rs  order_book.rs  ticker.rs  trades.rs
src/types/trading/: mod.rs  order.rs
