[package]
name = "rust_binance"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
rust_decimal = { version = "1.37.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.14.0"
serial_test = "3.2.0"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
url = "2.5.4"


[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
needless_return = "allow"
